--- a/src/style/pages.css
+++ b/src/style/pages.css
@@ -347,6 +347,8 @@
 
 .project-overview img {
   @apply my-4 rounded-lg shadow-lg transition-all duration-300 ease-in-out hover:scale-105;
+  max-width: 100%;
+  height: auto;
 }
 
 .hobby-links-container {
